# machinelearningpractice

./: .gitignore  README.md  chapter2_excercises.py  chapter3.py  pyproject.toml  utils.py
nlp/: tfidf.ipynb
principles_of_ml/: chapter12_excercies.ipynb  chapter2.py  chapter2_excercises.py  chapter3.py  chapter3_excercises.py  chapter8_excercises.ipynb  utils.py  utils_old.py
principles_of_ml/models/: dummy_clf_minst.joblib  sgd_clf_minst.joblib
