[project]
name = "exercises"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "datasets>=4.1.0",
    "evaluate>=0.4.5",
    "fastapi>=0.116.1",
    "gensim>=4.3.2",
    "gradio>=5.45.0",
    "huggingface-hub>=0.34.5",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "lxml>=6.0.2",
    "matplotlib>=3.10.6",
    "nltk>=3.9.1",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pip>=25.2",
    "ruff>=0.13.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "sentence-transformers>=5.1.0",
    "sentencepiece>=0.2.1",
    "spacy>=3.8.7",
    "tokenizers>=0.22.0",
    "torch>=2.8.0",
    "transformers>=4.56.1",
]
